[tool.poetry]
name = "flow-programming"
version = "0.1.0"
description = "network flow algorithms"
authors = ["Andrew Muth <agmuth@gmail.com>"]
readme = "README.md"
packages = [{include = "flow_programming"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
ruff = "^0.1.6"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
